# table-recognizer

./: CMakeLists.txt  conanfile.py
client/: CMakeLists.txt  application.cc  application.h  main.cc
client/UI/: UI_base.h  console_UI.cc  console_UI.h  console_input.cc  console_input.h
client/image_processing/: image_loader.cc  image_loader.h  line_detector.cc  line_detector.h  line_detector_adjuster.cc  line_detector_adjuster.h  table.cc  table.h  table_detector.cc  table_detector.h  table_recognizer.cc  table_recognizer.h
client/inc/: ImageLoader.h  Recognizer.h  Saver.h  Table.h  UI_base.h  application.h  console_UI.h  console_input.h  image_loader.h  line_detector.h  table.h  table_recognizer.h
client/src/: ImageLoader.cc  Recognizer.cc  Saver.cc  application.cc  console_UI.cc  console_input.cc  image_loader.cc  line_detector.cc  main.cc  table.cc  table_recognizer.cc
client/test/: table_detector_test.cc  table_recognizer_test.cc
server/: CMakeLists.txt
server/src/: main.cc
utils/: CMakeLists.txt
utils/inc/: line.h
utils/src/: line.cc
